[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Ricardo Coelho <9609090+prscoelho@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"
crossbeam = "0.7.3"
image = "0.22.3"